# ROSplayground

./: CMakeLists.txt  manifest.xml
SlidingWindowCircularBuffer/: SlidingWindowCircularBuffer.pro  SlidingWindowCircularBuffer.pro.user.a7d9c22.2.6pre1  circularbuffer.cpp  circularbuffer.h  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qglwidget.cpp  volumewidget.cpp  volumewidget.h
include/kfusionCPU/: internal.hpp  kfusionCPU.h  tdsfVolume.h  tsdfVolume.h
kinectfusionCPU/kfusionCPU/: .cproject  .project  .pydevproject  CMakeLists.txt  README  cmake_install.cmake  mainpage.dox  manifest.xml
kinectfusionCPU/kfusionCPU/include/kfusionCPU/: CircularBuffer.h  OptimizedSelfAdjointMatrix6x6f.h  kfusionCPU.h  tsdfVolume.h
kinectfusionCPU/kfusionCPU/launch/: kfusionCPU.launch~
kinectfusionCPU/kfusionCPU/src/: CircularBuffer.cpp  OptimizedSelfAdjointMatrix6x6f.cpp  kfusionCPU.cpp  kinectfusion_app.cpp  tsdfVolume.cpp
kinectfusionCPU/kfusionCPU/src/newest/: kfusionCPU.cpp  kinectfusion_app.cpp  tsdfVolume.cpp
kinectfusionCPU/kfusionCPU_benchmark/: CMakeLists.txt  mainpage.dox  manifest.xml
kinectfusionCPU/kfusionCPU_benchmark/include/kfusionCPU_benchmark/: SceneCloudView.h  depth_img.h  file_reader.h  groundtruth.h  rgbd_pair.h  tools.h
kinectfusionCPU/kfusionCPU_benchmark/launch/: benchmark.launch  benchmark.launch~
kinectfusionCPU/kfusionCPU_benchmark/mc_library/: make.sh  marching_cubes.cu~  marching_cubes.h~
kinectfusionCPU/kfusionCPU_benchmark/src/: SceneCloudView.cpp  benchmark.cpp
kinectfusionCPU/kfusionCPU_msgs/: mainpage.dox  manifest.xml
kinectfusionCPU/kfusionCPU_msgs/msg/: Transformation.msg  Volume.msg
kinectfusionCPU/kfusionCPU_visualization/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  manifest.xml~  screenshot-1355413286.cam
kinectfusionCPU/kfusionCPU_visualization/include/kfusionCPU_visualization/: SceneCloudView.h  fluent_interface.h  pcl_trajectory_visualizer.h  pcl_trajectory_visualizer.h~  trajectory_visualizer.h~
kinectfusionCPU/kfusionCPU_visualization/mc_library/: make.sh  make.sh~  marching_cubes.cu  marching_cubes.h
kinectfusionCPU/kfusionCPU_visualization/src/: SceneCloudView.cpp  kfusion_vis.cpp  pcl_trajectory_visualizer.cpp  pcl_trajectory_visualizer.cpp~  trajectory_visualizer.cpp~
mc_library/: CMakeLists.txt  marching_cubes.cu
src/: kfusionCPU.cpp  kinectfusion_app.cpp  tdsfVolume.cpp
